package vn.qlkt.award;

import java.util.Date;
import java.util.Map;

public class KhenThuongDotXuat {
    private String id;
    private String loai;
    private DoiTuongKhenThuong doi_tuong;
    private String quan_nhan_id;
    private String co_quan_don_vi_id;
    private String don_vi_truc_thuoc_id;
    private String hinh_thuc_khen_thuong;
    private Integer nam;
    private String cap_bac;
    private String chuc_vu;
    private String ghi_chu;
    private String so_quyet_dinh;
    private Map files_dinh_kem;
    private Date createdAt;
    private Date updatedAt;
}
